fixed fixed fixed text and spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -82,41 +82,41 @@ margin-right: 45px;
 width:900px;
 }
 #AboutTheCourse {
-padding-top: 15px;
+padding-top: 5%;
+font-size: 3vmin;
     
 }
 .aboutthecourse {
 margin-top: -3%;
-margin-bottom: 1%;    
+   
 }
 .nicetoknow{
-margin-top: 10%;
-margin-bottom: 5%;
+
 }
 .coursebreakdown{
-margin-top: 15%;
-margin-bottom: 10%;
+margin-top: 5%;
+
 }
 #nicetoknow {
-padding-top: 30px;
+padding-top: 5%;
 }
 #unilife {
-padding-top: 30px;
+padding-top: 5%;
 }
 #events {
-padding-top: 30px;
+padding-top: 5%;
 }
 #industrylinks {
-padding-top: 30px;
+padding-top: 5%;
 }
 #bbygk {
-padding-top: 30px;
+padding-top: 5%;
 }
 #currentstudents {
-padding-top: 30px;
+padding-top: 5%;
 }
 #contact {
-padding-top: 30px;
+padding-top: 5%;
 }
 /* link styles */
 a {
@@ -297,7 +297,7 @@ ul {
 }
 
 .section-title {
-    font-size: 30px;
+    font-size: 3vmin;
     line-height: 30px;
     color: #333333;
     margin-bottom: 50px;
